fix_modal-overflow/Oleksii

--- a/src/Components/Services/Instances/Modals/Modals.module.scss
+++ b/src/Components/Services/Instances/Modals/Modals.module.scss
@@ -475,8 +475,8 @@
 }
 
 .rebuild_modal__body {
-  padding-bottom: 100px;
-  overflow: hidden;
+  padding-bottom: 180px;
+  overflow-x: hidden;
 }
 
 .error_message {
