--- a/src/Components/ui/InstructionModal/InstructionModal.module.scss
+++ b/src/Components/ui/InstructionModal/InstructionModal.module.scss
@@ -11,6 +11,10 @@
     &::-webkit-scrollbar-button:end {
       height: 0;
     }
+    a {
+      color: var(--link-text);
+      text-decoration: underline;
+    }
   }
 }
 
